# saccade

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.html  README.md  eagle_eye.pro  eagleeye.desktop  main.cpp  saccade.desktop  textures.qrc
.deploy/: deploy_static.sh  pipeline.sh  run.sh
.deploy/images/dynamic/: Dockerfile
.deploy/images/static/: Dockerfile
.deploy/tools/: create_pro.py
.docker/: create_pro.py
.docker/dynamic/: Dockerfile
.docker/static/: Dockerfile
GUI/: CMakeLists.txt  about_window.cpp  about_window.h  about_window.ui  canvas.cpp  canvas.h  clickable_label.cpp  clickable_label.h  histogram.cpp  histogram.h  image_window.cpp  image_window.h  layer.cpp  layer.h  marker.cpp  marker.h  slides.cpp  slides.h  window.cpp  window.h
Icon/: resize.sh
Utils/: ascii_loader.cpp  ascii_loader.h  ascii_loader_animation.cpp  ascii_loader_animation.h  gl_manager.cpp  gl_manager.h  gl_object.h  histogram_data.cpp  histogram_data.h  image_data.cpp  image_data.h  mipmap.cpp  mipmap.h  mipmap_level.cpp  mipmap_level.h  mipmap_tile.cpp  mipmap_tile.h  misc.h  selection.cpp  selection.h  version.cpp  version.h.in
Utils/Imageloader/: dvc_loader.cpp  dvc_loader.h  freeimage_loader.cpp  freeimage_loader.h  image_loader.h  opticalflow_loader.cpp  opticalflow_loader.h
Utils/Ops/: gamma_op.cpp  gamma_op.cu  gamma_op.h  histogram_op.cpp  histogram_op.cu  histogram_op.h  img_op.h
Utils/Python/: api.cpp  api.h
build2/: saccade
cmake/Modules/: FindFreeImage.cmake  FindGlew.cmake  FindGlog.cmake  FindQt5.cmake  GenerateVersionDefinitions.cmake
deploy/: .wrapper  collect_libs.sh  deploy.sh
